# voicetree

./: .ckignore  .codeql-config.yml  .coveragerc  .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .ignore  .jscpd.json  .mcp.json  .npmrc  .pre-commit-config.yaml  .rgignore  .zshrc.bak  .zshrc_minimal  =3.0.0  AGENTS.md  AGENT_ALICE_integration_test.md  AGENT_WORKFLOW_GUIDE.md  ARCHITECTURE_CLEANUP_SUMMARY.md  AUDIO_DEPENDENCY_SOLUTION.md  BUILD_DISTRIBUTION.md  BUILD_SERVER.md  CHANGELOG.md  CI_CD_SOLUTION_SUMMARY.md  CLAUDE.md  CREATE_SUBAGENTS_COMMAND.md  DEVELOPMENT_SPEED_GUIDE.md  EMBEDDING_SEARCH_BUG_HANDOVER.md  HANDOVER-BuildSystemFunctionalRefactor.md  LICENSE  Makefile  NoLiMa_twohop_question_example.md  PackageProjectForLLM.py  README-dev.md  README.md  SETUP.md  (+140 more)
.claude/: scheduled_tasks.json  settings.agent.json  settings.json  settings.local.DEPRECATED.json  settings.local.json
.codex/: hooks.json
.githooks/: commit-msg  pre-commit  pre-push  pre-push.impl.sh  pre-push.run.sh
.serena/: project.yml
backend/: README-dev.md  REFACTORING_REPORT.md  SETTINGS_ARCHITECTURE.md  TROA_Integration_and_Testing_Plan.md  __init__.py  apply_orphan_connection.py  claude.md  debug_buffer_issue.py  debug_fuzzy_matcher.py  debug_workflow_text.py  enhanced_transcription_processor.py  example_integration.py  logging_config.py  main.py  migration.py  parent_pid_watchdog.py  paths.py  process_transcription.py  quality_log.txt  readme-dev.md  settings.py  settings_new.py  test_boundary_issue.py  test_buffer_failure.py  test_mock_edge_case.py  tree_reorganization_agent.py  types.py  vt_evolution.md  workflow_adapter.py
benchmark_results/: Chunk_Boundary_Handling_state.json  Learning_Journey_state.json  Meeting_Series_state.json  Project_Evolution_state.json  multi_exec_benchmark_20250611_190546.json  multi_exec_summary.md
claude/: settings.agent.json
cloud_functions/: pytest.ini
cross_tests/: __init__.py  conftest.py  run_tests.py  test_frontend_backend_integration.py
docker/: Dockerfile  README.md  entrypoint.sh  install-agents.sh
docs/: agent-concept-path-map.md  bf-376-outbound-design.md  browser-mode.md  daemon-first-architecture.md  headless-migration.md  multi-project-routing.md  multi-vault-routing.md  renderer-live-debugging.md  step7-design.md  step9-design.md
frontend/: create_folder_notes.py  vscode-terminal-transform-test.js
future/: CHANGELOG.md  Makefile
future_BAD_CORRUPTED/: .gitignore  .pre-commit-config.yaml  requirements.txt
get_dev_healthy/: folder-node-mockup.html  mutagen-vt-csv-history.yml  mutagen-vt-remote.yml  vt-remote.sh
gsm_system/: NoLiMa_example_question.md  agent_benchmark_strategy.md  agent_simple_benchmark_strategy.md  analyze_nolima_efficiency.py  analyze_tags.py  find_files_by_tags_OR.py  fix_forward.md  get_full_contents.py  get_voicetree_nodes.py  graph_dependency_traversal_and_accumulate_graph_content.py  llm_air_traffic_control.py  nolima_agent_prompt.md  nolima_voicetree_prompt.md  nolima_voicetree_prompt_simple.md  possible_benchmark_strategies.md  run_air_traffic_solver.sh  run_air_traffic_solver_oneshot.sh  solve_GSM_prompt_hard_16.md  solve_GSM_prompt_hard_16_air_traffic.md  solve_GSM_prompt_medium.md  test_node_selection.py  ultimate_sys.md
health-dashboard/: app.js  checkTiers.js  checks.js  copyStatus.js  explainToggle.js  fileTree.js  format.js  gates.js  git.js  index.html  metricExplanations.js  rollupBreakdown.js  server.mjs  style.css  treemap-hierarchy.js  treemap-layout.js  treemap-render.js  treemap.js  wallClock.js
hooks/: debug_hook.py  tree_update_reminder.py
legacy/: NODE_CREATION_REMINDER.md.backup  PackageProjectForLLM.py  claude.sh  claude_settings.json.backup  cleanup_vault.sh  graph_dependency_traversal_and_accumulate_graph_content.py  prompt_main.md.backup
markdownTreeVault/: claude.sh  common_agent_setup.sh  gemini.sh
memories/: memory_index.md
meta/: demo_prompt_wait.md  fix_tests_prompt.md  hooks.md  serena-README.md  test_commit.txt
openspec/: please_see_brain_working-memory_openspec_instead.agent_instruction
perf-dashboard/: app.js  index.html  server.mjs  server.test.mjs  style.css
scripts/: build-vt-fake-agent.sh  build_and_package_all_platforms.sh  build_and_package_all_without_sign.sh  build_and_package_arm.sh  build_and_package_intel.sh  build_and_package_linux.sh  build_and_package_linux_x64.sh  build_and_package_mac_universal.sh  build_and_package_windows.ps1  build_server.sh  build_server_intel.sh  build_server_linux.sh  build_server_linux_x64.sh  build_server_windows.ps1  capture-ci-checks.mjs  check-agent-instructions-sync.mjs  check-circular-deps.mjs  check-complexity-health.mjs  check-coupling.mjs  check-purity.mjs  check-semantic-coupling.mjs  check-transitive-complexity.mjs  check_python_direct.sh  ci_emergency_bypass.sh  codeql-runner.mjs  codex-ci-loop.sh  configure-worktree-cdp.sh  ensure-perf-stack.mjs  ensure-perf-stack.test.mjs  install-linux.sh  install-vitest-shim.mjs  lint-blackbox-tests.sh  measure-relative-imports.mjs  measure-relative-imports.report.json  measure-relative-paths.mjs  measure-relative-paths.report.json  on-new-node.cjs  on-worktree-created-async.sh  on-worktree-created-blocking.sh  on-worktree-created.sh  (+21 more)
tests/: conftest.py
tools/: .agent_names_tracker  PackageProjectForLLM.py  README.md  add_new_node.py  check_relative_paths.py  check_typing.py  claude-settings.json  (+19 more)
(+5620 files in other folders)
