[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
# Enable TypedDict checking
enable_error_code = ["typeddict-item", "typeddict-unknown-key"]
# Require TypedDict for dict with known structure
disallow_any_unimported = true

# NO EXCEPTIONS - All code must follow strict typing rules
# No backwards compatibility - enforce single solution principle

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicetree"
version = "0.1.0"
description = "Voice to structured graph system"
requires-python = ">=3.13"
dependencies = [
    "setuptools",
    "python-dotenv",
    "google~=3.0.0",
    "nltk~=3.8.1",
    "rake-nltk",
    "google-generativeai",
    "google-genai>=1.20.0",
    "openai",
    "rapidfuzz>=3.0.0",
    "langgraph>=0.1.0",
    "langchain-core>=0.1.0",
    "typing-extensions>=4.0.0",
    "sentence-transformers==2.7.0",
    "chromadb>=1.0.0",
    "onnxruntime>=1.16.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.3.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "termcolor>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-cov>=4.0.0",
    "coverage[toml]>=7.0",
]

[dependency-groups]
dev = [
    "nest-asyncio>=1.6.0",
    "pytest-asyncio>=1.2.0",
]

[tool.setuptools]
packages = ["backend", "tools"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (includes I251 - prevent multiple imports from same module)
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ANN", # flake8-annotations - enforces type hints
    "TID252", # ban relative imports
    "PTH", # flake8-use-pathlib - encourage pathlib usage over os.path
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    # Note: PTH rules don't directly catch Path(__file__).parent patterns
    # which can break in packaged/frozen environments. Consider using
    # absolute paths or environment variables for configuration instead.
]

# Enforce single imports for better refactoring
[tool.ruff.lint.isort]
force-single-line = true  # Force imports to be on separate lines

# NO PER-FILE IGNORES - Enforce typing everywhere

# Custom checks for Path(__file__) usage that can break in packaged environments
# Run: python tools/check_relative_paths.py backend/
# This detects Path(__file__) patterns that broke Electron dist builds